# expe-genomics

./: README.md  config.yml  definitions.py  notes.txt  pyproject.toml
data/: cases.csv  reports.json  summaries.json
resources/: templates.py
resources/annotations/: maxo-annotations.tsv
resources/faiss_idx/: index.faiss  index.pkl
resources/vectors/: index.faiss  index.pkl
src/: __init__.py
src/knowledge_building/: Builder.py  __init__.py  describe_annotations.py  graphviz.py  kb_templates.py  knowledge.py  schemas.py
src/oa_data_harvesting/: __init__.py  case_extraction.py  data_harvesting.py
src/retrieval/: Retriever.py  __init__.py  testing.md
