[project]
name = "expe-genomics"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "selenium (>=4.36.0,<5.0.0)",
    "langchain-community (>=0.3.31,<0.4.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pypdf (>=6.1.1,<7.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "playwright (>=1.55.0,<2.0.0)",
    "langchain-ollama (>=0.3.10,<0.4.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "networkx (>=3.5,<4.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "numpy (>=2.3.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "expe_genomics", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
